--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="style.css">
-  <title>mufuuuu timestamp search</title>
+  <title>mufuuuu timestamp search beta</title>
   <script src="main.js"></script>
 </head>
 <body>
