--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>mufuuuu timestamp search</h1>
+    <h1>mufuuuu timestamp search beta</h1>
   </header>
   <div id="search" class="flex-container">
     <div id="search-container" class="flex-container">
