インライン再生に対応

--- a/index.html
+++ b/index.html
@@ -108,5 +108,8 @@
     </ul>
     <div id="search-message" class="bottom-message flex"></div>
   </div>
+  <div id="modal">
+    <div id="player"></div>
+  </div>
 </body>
 </html>
