--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <header>
+  <header class="flex-container flex-gap">
     <h1>mufuuuu timestamp search beta</h1>
+    <span class="flex"></span>
+    <a class="chrome-store-button" href="https://chrome.google.com/webstore/detail/youtube-timestamp-loader/fphkagciemkekbkmlcofhiofhdkchbmm" target="_blank" rel="noopener">
+      <img src="img/chrome-store.png" width="206" height="58">
+    </a>
+    <a class="twitter-follow-button" href="https://twitter.com/4chouyou" target="_blank" rel="noopener">
+      <img src="img/twitter.png" width="58" height="58">
+    </a>
   </header>
   <div id="search" class="flex-container flex-direction-column">
     <div id="search-container" class="flex-container flex-direction-column">
