--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="style.css">
   <title>mufuuuu timestamp search beta</title>
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="android-chrome-192x192.png">
   <script src="main.js"></script>
 </head>
 <body>
